# rod

./: .gitignore  CMakeLists.txt  README.md
examples/modules/: CMakeLists.txt  Factory.hpp  Object.hpp  Service.hpp  main.cpp  module1.cpp  module2.cpp
examples/q-model-index/: CMakeLists.txt  MyIndex.cpp  MyIndex.hpp  MyModel.cpp  MyModel.hpp  main.cpp
include/rod/: Annotation.hpp  AsContextual.hpp  AsEnrichment.hpp  AsSingleton.hpp  Bind.hpp  BindContextual.hpp  Container.hpp  Context.hpp  ContextAccessor.hpp  ContextEntry.hpp  ContextLevel.hpp  ContextOwner.hpp  Contextual.hpp  ContextualAccessor.hpp  CustomContextOwner.hpp  Dispatcher.hpp  Each.hpp  Extend.hpp  Find.hpp  Generate.hpp  Method.hpp  Resolve.hpp  Rod.hpp  Root.hpp  TString.hpp  ToBeInjected.hpp  TypeList.hpp  TypeRegistry.hpp  With.hpp  Within.hpp  erase  get  pipe  resolve  with
include/rod/annotation/: AutoResolve.hpp  Component.hpp  ConstructWith.hpp  ContextualRecord.hpp  ExtendWith.hpp  Requires.hpp  Resolver.hpp
include/rod/api/: all
include/rod/boost/: hana_concept  hana_get  hana_resolve_monad
include/rod/common/: MakeVoid.hpp  NullType.hpp  Pair.hpp  RotateArgs.hpp  SameType.hpp  Select.hpp  Sequence.hpp  TypeName.hpp
include/rod/concept/: Callable  CallableWith  Resolver
include/rod/configuration/: Component.hpp  ComponentConfig.hpp  Components.hpp  ComponentsConfiguration.hpp  Configuration.hpp  ConfigurationReader.hpp  Interface.hpp  InterfaceConfig.hpp  Interfaces.hpp  InterfacesConfiguration.hpp
include/rod/configuration/annotation/: ContextConfiguration.hpp
include/rod/configuration/parser/: ComponentElement.hpp  ContextElement.hpp  InterfaceElement.hpp  ProvidedByElement.hpp
include/rod/debug/: Inspect.hpp
include/rod/dispatch/: Dispatcher.hpp  Linear.hpp
include/rod/experimental/construct/: MemberConstructor.hpp  TypeCreator.hpp
include/rod/feature/instance/: as  instance  instance_tag
include/rod/feature/type/: base_of  is  of_base  type  type_tag
include/rod/holder/: InjectedReference.hpp  InjectedValue.hpp  ObjectOwner.hpp  ObjectReference.hpp  SingletonHolder.hpp  SingletonOwner.hpp
include/rod/integration/boost/: hana_concept  hana_get  hana_resolve_monad
include/rod/integration/range_v3/: get
include/rod/match/: Annotation.hpp  Component.hpp  Interface.hpp  Type.hpp
include/rod/resolve/: hana_tuple
include/rod/resolve/concept/: FeatureQueryOperator  FeatureQueryOperator.concept  Resolver  TypeRepC  TypeRepC.concept
include/rod/resolve/feature-query/: instance_of.operator
include/rod/resolve/feature_query/: instance_of
include/rod/resolve_framework/: type_index_source
include/rod/resolve_framework/concept/: FeatureQueryOperator  Resolver  TypeRepC  TypeRepR
include/rod/resolve_framework/feature_query/: instance_of
include/rod/source/: hana_monad  type_index
include/rod/xml/: XmlContent.hpp  XmlNodeType.hpp  XmlReader.hpp
include/rod/xml/annotation/: ChildElement.hpp  DataNode.hpp  Element.hpp  RootElement.hpp  XmlParserProvider.hpp
include/rod/xml/rapidxml/: NodeTool.hpp  Parser.hpp
old/include/rod/: Annotation.hpp  ContextOwner.hpp  CustomContextOwner.hpp  Each.hpp  Evaluable.hpp  Find.hpp  Injected.hpp  Memory.hpp  Reduce.hpp  Singleton.hpp  TString.hpp  TypeList.hpp
old/include/rod/annotation/: Component.hpp
old/include/rod/common/: BoolToType.hpp  CanConvert.hpp  IntToType.hpp  Sequence.hpp  SuperSubClass.hpp  TypeName.hpp
old/include/rod/configuration/: Component.hpp  ComponentsConfiguration.hpp  ConfigurationReader.hpp  Interface.hpp  InterfacesConfiguration.hpp
old/include/rod/debug/: Inspect.hpp
old/include/rod/evaluable/: EvaluableResolver.hpp
old/include/rod/holder/: InjectedReference.hpp  ObjectOwner.hpp  ObjectReference.hpp  SingletonOwner.hpp
old/include/rod/trait/: IsContextMovable.hpp
old/include/rod/xml/: FileXmlContent.hpp  XmlReader.hpp
old/test/experimental/construction/: type-construction-test.cpp  type-creation-test.cpp
old/test/integration/componentCreation/: dependentSingleton-acrossLevels-test.cpp  dependentSingleton-sameLevel-ordered-test.cpp
old/test/integration/customContext/: publicInterface-test.cpp  selfRequirements-test.cpp
old/test/integration/each/: each-test.cpp
old/test/integration/extend/: extendAs-explicit-test.cpp  extendWithComponent-explicit-test.cpp  extendWithReference-deduced-test.cpp  extendWithReference-explicit-test.cpp  extendWithType-deduced-test.cpp  extendWithValue-explicit-test.cpp
old/test/integration/resolving/: interface-test.cpp
old/test/integration/within/: within-singleton-test.cpp  within-value-test.cpp
test/: test_main.cpp
test/experimental/construction/: provided-reference-test.cpp
test/failing/msvc/multiSingleton/: passing-2-test.cpp  passing-3-test.cpp
test/failing/msvc/sameRoot/: passing-2-test.cpp
test/functional/rod/resolve/: resolve.api.spec.cpp
test/integration/accessOptimization/: customContext-context-movable-test.cpp
test/integration/componentCreation/: dependentSingleton-acrossLevels-test.cpp  dependentSingleton-sameLevel-ordered-test.cpp  dependentSingleton-sameLevel-unordered-test.cpp  simpleSingleton-test.cpp
test/integration/customContext/: injectedRequirements-test.cpp  parentRequirements-test.cpp
test/integration/dispatch/: dispatch-test.cpp  linear-test.cpp
test/integration/each/: each-test.cpp
test/integration/entry/: default-withInjected-test.cpp  defaultNoConfiguration-test.cpp  enter-test.cpp  plain-test.cpp
test/integration/evaluable/: evaluable-test.cpp  resolver-test.cpp
test/integration/extend/: extendAs-deduced-test.cpp  extendAs-explicit-test.cpp  extendWithComponent-deduced-test.cpp  extendWithType-deduced-test.cpp  extendWithType-explicit-test.cpp  extendWithValue-deduced-test.cpp  plainRoot-deduced-test.cpp  plainRoot-explicit-test.cpp
test/integration/moving/: move-test.cpp
test/integration/resolving/: interface-test.cpp  sameLevel-test.cpp
test/integration/with/: withSingleton-test.cpp
test/unit/: MockContext.hpp  test.cpp
test/unit/rod/: pipe.spec.cpp  resolve.spec.cpp
(+102 files in other folders)
